Adding support for other browsers

--- a/nav.html
+++ b/nav.html
@@ -3,7 +3,8 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.png" alt=" " width="30" height="30">
+                <img src="images/logo.png" alt="logo" 
+                 class="d-inline-block align-text-top me-1" width="30" height="30">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
