--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -247,7 +247,7 @@
 				</ul>
 				<p>
 					For more details, please review our 
-					<a href="./privacy_policy.html">Privacy Policy</a>.
+					<a href="./privacy_policy">Privacy Policy</a>.
 				</p>
 
 				<h3>
@@ -275,10 +275,10 @@
 						📧 <b>Customer Support:</b> [support@hazeltownstudio.com]
 					</li>
 					<li>
-						🌐 <b>Website:</b> [www.hazeltownstudio.com]
+						🌐 <b>Website:</b> <a href="www.hazeltownstudio.com">www.hazeltownstudio.com</a>
 					</li>
 					<li>
-						📄 <b>Privacy Policy:</b> [Privacy Policy Link]
+						📄 <b>Privacy Policy:</b> <a href="www.hazeltownstudio.com/privacy_policy">www.hazeltownstudio.com/privacy_policy</a>
 					</li>
 				</ul>
 
