--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
 <div class="header">
     <nav class="navbar fixed-top navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="/">
                 <img src="images/logo.png" alt="logo" 
                  class="d-inline-block align-text-top me-1" width="30" height="30">
             </a>
@@ -15,7 +15,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link hover-effect" href="index.html">
+                        <a class="nav-link hover-effect" href="/">
                             Home
                         </a>
                     </li>
@@ -24,8 +24,8 @@
                           Policies
                         </a>
                         <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarPoliciesDropdown">
-                          <li><a class="dropdown-item" href="terms_of_service.html">Terms of Service</a></li>
-                          <li><a class="dropdown-item" href="privacy_policy.html">Privacy Policy</a></li>
+                          <li><a class="dropdown-item" href="/terms_of_service">Terms of Service</a></li>
+                          <li><a class="dropdown-item" href="/privacy_policy">Privacy Policy</a></li>
                         </ul>
                     </li>
                 </ul>
