--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>
-		Hazeltown Studio | Privacy Policy
+		Hazeltown Studio
 	</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
